<resources>
    <string name="app_name">IET-VIT</string>
    <string name="google_login">Login with Google</string>
    <string name="github_login">Login with Github</string>
    <string name="email_login">Login with E-mail</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_users">Peers</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>

    <string name="upcoming_events_text"><![CDATA[Upcoming Events & Workshops]]></string>
    <string name="no_meetings_upcoming">No meetings upcoming</string>
    <string name="FCM_API_KEY">AAAAlyxo9UA:APA91bFZ76YAsrr4Zdw5d-HdeJWsOt1o8CnQyOMPwo-erlgM7dY22C8nXis8KSJ0b9fJ6J3ArGVntByQcgCizEr_L9X3qRUByGoHyz3wC8vIQ1MYgM0VfJOXvCz_9zFkFGGvECymkFIq</string>

    <string name="register">Register</string>
    <string name="email_register">Register with E-mail</string>
    <string name="confirm_password">Confirm Password</string>

</resources>